BL-5559 create RegressionSequential selenium suite

--- a/mot-web-frontend/module/Application/view/dvsa-mot-test/brake-test-results/brake-test-configuration-class3-and-above.phtml
+++ b/mot-web-frontend/module/Application/view/dvsa-mot-test/brake-test-results/brake-test-configuration-class3-and-above.phtml
@@ -21,6 +21,7 @@ $this->layout()->setVariable('pageSubTitle', $viewModel->motTestTitleViewModel->
 $this->layout()->setVariable('pageTitle', $viewModel->title);
 $this->headTitle($viewModel->title);
 
+
 $this->placeholder('progressBar')->captureStart();
 echo $this->partial(
     'motTestProgress',
@@ -74,8 +75,14 @@ $this->placeholder('progressBar')->captureEnd();
                     <div class="form-group form-group-related label-reg">
                         <?php foreach ($viewModel->weightTypes as $weightType => $weightTypeName):
                             $hasBrakeTestWeight = false;
-                            if ($viewModel->configHelper->getWeightType() === $weightType && $viewModel->preselectBrakeTestWeight) {
-                                $hasBrakeTestWeight = true;
+                            if($viewModel->isFeatureToggleOn) {
+                                if ($weightType == $viewModel->selectedWeightType) {
+                                    $hasBrakeTestWeight = true;
+                                }
+                            } else {
+                                if ($viewModel->configHelper->isSelectedWeightType($weightType) && $viewModel->preselectBrakeTestWeight) {
+                                    $hasBrakeTestWeight = true;
+                                }
                             }
                             ?>
                             <label class="block-label label-clear" for="weightType-<?php echo $this->escapeHtml($weightType); ?>">
