--- a/mot-web-frontend/module/Application/view/application/index/cookies.phtml
+++ b/mot-web-frontend/module/Application/view/application/index/cookies.phtml
@@ -11,16 +11,17 @@
     </div>
     <p>You’ll normally see a message on the site before we store a cookie on your computer.</p>
     <p>Find out more about <a rel="external" href="http://www.aboutcookies.org/">how to manage cookies.</a></p>
-    <h2 class="heading-medium">How cookies are used on MOT testing service</h2>
+    <h2 class="heading-medium">How cookies are used on the MOT testing service</h2>
     <p>There are a number of different types of cookie used in the MOT testing service which allow the system to work securely and consistently. These are:</p>
     <ul class="list-bullet">
         <li>Google Analytics cookies</li>
         <li>MOT testing service application cookies</li>
-        <li>third party cookies</li>
+        <li>SmartSurvey feedback cookies</li>
         <li>Imperva Incapsula cookies</li>
+        <li>Hotjar Cookies</li>
     </ul>
     <h3 class="heading-small">Google Analytics cookies</h3>
-    <p>We use Google Analytics software to collect information about how you use MOT testing service. We do this to help make sure the site is meeting the needs of its users and to help us make improvements, eg
+    <p>We use Google Analytics software to collect information about how you use MOT testing service. We do this to help make sure the site is meeting the needs of its users and to help us make improvements, for example
         <a rel="external" href="https://mattersoftesting.blog.gov.uk/improving-how-you-enter-test-results/">improving how you enter test results.</a>
     </p>
     <p>Google Analytics stores information about:</p>
@@ -30,7 +31,7 @@
         <li>how you got to the site</li>
         <li>what you click on while you're visiting the site</li>
     </ul>
-    <p>Google do not collect or store your personal information (eg your name or address) so this information can't be used to identify who you are. We don't allow Google to use or share our analytics data.</p>
+    <p>Google does not collect or store your personal information, for example your name or address, so this information can't be used to identify who you are. We don't allow Google to use or share our analytics data.</p>
     <p>Google Analytics sets the following cookies:</p>
     <h4 class="heading-small">Universal Analytics</h4>
 </div>
@@ -45,7 +46,7 @@
     <tbody>
     <tr>
         <td>_ga</td>
-        <td>This helps us count how many people visit MOT testing service by tracking if you've visited before</td>
+        <td>This helps us count how many people visit the MOT testing service by tracking if you’ve visited before</td>
         <td>2 years</td>
     </tr>
     <tr>
@@ -53,37 +54,10 @@
         <td>Used to manage the rate at which page view requests are made</td>
         <td>10 minutes</td>
     </tr>
-    </tbody>
-</table>
-<h4 class="heading-small">Google Analytics</h4>
-<table>
-    <thead>
     <tr>
-        <th>Name</th>
-        <th>Purpose</th>
-        <th>Expires</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>_utma</td>
-        <td>Like _ga, this lets us know if you've visited before, so we can count how many of our visitors are new to MOT testing service or to a certain page</td>
-        <td>2 years</td>
-    </tr>
-    <tr>
-        <td>_utmb</td>
-        <td>This works with _utmc to calculate the average length of time you spend on MOT testing service</td>
-        <td>30 minutes</td>
-    </tr>
-    <tr>
-        <td>_utmc</td>
-        <td>This works with _utmb to calculate when you close your browser</td>
-        <td>when you close your browser</td>
-    </tr>
-    <tr>
-        <td>_utmz</td>
-        <td>This tells us how you reached MOT testing service (eg from another website or a search engine)</td>
-        <td>6 months</td>
+        <td>_gid</td>
+        <td>Used to tell between people using the MOT history service</td>
+        <td>24 hours</td>
     </tr>
     </tbody>
 </table>
@@ -112,7 +86,8 @@
 </table>
 <div class="text">
     <h3 class="heading-small">Security cards (two-factor authentication)</h3>
-    <p>You may see a message when you log in informing you of changes to our security policy and the introduction of security cards. We use a cookie to indicate that you have seen that message so we do not show it to you again that day. We will also use cookies to remember if you have used security questions to login that day or that you have a security card on order so that we do not ask you for your security card PIN for the rest of the day.</p>
+    <p>You may see a message when you log in informing you of changes to our security policy and the introduction of security cards. We use a cookie to indicate that you have seen that message so we do not show it to you again that day.</p>
+    <p>We will also use cookies to remember if you have used security questions to login that day or that you have a security card on order so that we do not ask you for your security card PIN for the rest of the day.</p>
 </div>
 <table>
     <thead>
@@ -124,25 +99,25 @@
     </thead>
     <tbody>
     <tr>
-        <td>hasSeenCardInformation</td>
-        <td>Set to remember that you have seen the "Changes to security" information message</td>
+        <td>_hasSeenCardInformation</td>
+        <td>Remembers that you have seen the "Changes to security" information message</td>
         <td>Midnight</td>
     </tr>
     <tr>
         <td>_hasLoggedInWithLostForgottenCardJourney</td>
-        <td>Set to remember that you have logged in using security questions today</td>
+        <td>Remembers that you have logged in using security questions today</td>
         <td>Midnight</td>
     </tr>
     <tr>
         <td>_hasSeenOrderedCardLandingPage</td>
-        <td>Set to remember that you have seen the "Card on order" landing page</td>
+        <td>Remembers that you have seen the "Card on order" landing page</td>
         <td>Midnight</td>
     </tr>
     </tbody>
 </table>
 <div class="text">
     <h3 class="heading-small">Session management and security</h3>
-    <p>MOT testing service uses cookies for session management and security. No personal identification data will be stored in any browsers. Once the browser is closed those cookies will be removed.</p>
+    <p>The MOT testing service uses cookies for session management and security. No personal identification data will be stored in any browsers. Once the browser is closed those cookies will be removed.</p>
 </div>
 <table>
     <thead>
@@ -155,7 +130,7 @@
     <tbody>
     <tr>
         <td>PHPSESSID</td>
-        <td>Stores a Session identifier between pages to speed up browsing. It only used as a key to small amounts of non-persistent data such as search criteria.</td>
+        <td>Stores a session identifier between pages to speed up browsing. It is only used as a key to small amounts of non-persistent data such as search criteria.</td>
         <td>When you close your browser</td>
     </tr>
     <tr>
@@ -168,7 +143,10 @@
 <div class="text">
     <h2 class="heading-medium">Third-party cookies</h2>
     <h3 class="heading-small">Our feedback survey</h3>
-    <p>We use <a rel="external" href="http://www.smartsurvey.co.uk/">SmartSurvey</a> to collect responses to the survey. If you take part, SurveyMonkey will save extra cookies to your computer to track your progress through it. For more information, please see <a rel="external" href="https://www.smartsurvey.co.uk/privacy-policy">Smart Survey privacy information.</a></p>
+    <p>We use <a rel="external" href="http://www.smartsurvey.co.uk/">SmartSurvey</a> to collect feedback comments.
+        If you use the feedback survey, SmartSurvey will save extra cookies to your computer to track your progress through it. See
+        <a rel="external" href="https://www.smartsurvey.co.uk/privacy-policy">SmartSurvey privacy policy</a> for more information.
+    </p>
 </div>
 <table>
     <thead>
@@ -181,12 +159,12 @@
     <tbody>
     <tr>
         <td>ASP.Net_SessionId</td>
-        <td>ASP.NET uses to store a unique identifier for your session</td>
+        <td>Used to store a unique identifier for your session</td>
         <td>When you close your browser</td>
     </tr>
     <tr>
         <td>_ga</td>
-        <td>This helps us count how many people visit MOT testing service by tracking if you’ve visited before</td>
+        <td>Helps us count how many people visit MOT testing service by tracking if you’ve visited before</td>
         <td>2 years</td>
     </tr>
     <tr>
@@ -199,8 +177,8 @@
 <div class="text">
     <h3 class="heading-small">Imperva Incapsula cookies</h3>
     <p>Imperva Incapsula cookies help the Imperva Incapsula service identify malicious activity.</p>
-    <p>The cookies collect information in an anonymous form - they don't collect or store any personal information (eg names or addresses) so this information can’t easily be used to identify who the user is.</p>
-    <p>The only constant cookie is the Visitor ID (see visid_incap_{ID} below) - the other Imperva Incapsula cookies are removed within 15 minutes or once the browser is closed.</p>
+    <p>The cookies collect information in an anonymous form. They don't collect or store any personal information (eg names or addresses) so this information can’t easily be used to identify who the user is.</p>
+    <p>The only constant cookie is the Visitor ID (visid_incap_{ID}). Other Imperva Incapsula cookies are removed within 15 minutes or once the browser is closed.</p>
 </div>
 <table>
     <thead>
@@ -213,7 +191,7 @@
     <tbody>
     <tr>
         <td>incap_ses_{ID}</td>
-        <td>Session-Cookie containing an encrypted Session id. Used to relate HTTP requests to a particular visit.</td>
+        <td>Contains an encrypted Session ID. Used to relate HTTP requests to a particular visit.</td>
         <td>When you close your browser</td>
     </tr>
     <tr>
@@ -223,13 +201,60 @@
     </tr>
     <tr>
         <td>visid_incap_{ID}</td>
-        <td>Visitor-Cookie containing Visitor id. This cookie is used to relate sessions to a specific visitor's device.</td>
+        <td>Visitor-Cookie containing Visitor ID. This cookie is used to relate sessions to a specific visitor's device.</td>
         <td>One Year</td>
     </tr>
     </tbody>
 </table>
 <div class="text">
+    <h3 class="heading-small">Hotjar cookies</h3>
+    <p>From time to time, the MOT testing service uses a third party service, Hotjar, to enable surveys.
+        We do this to help make sure the site is meeting the needs of its users and to help us make improvements.</p>
+    <p>Hotjar uses the following cookies:</p>
+</div>
+<table>
+    <thead>
+    <tr>
+        <th>Name</th>
+        <th>Purpose</th>
+        <th>Expires</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>_hjClosedSurveyInvites</td>
+        <td>Used if you interact with a pop-up survey. It makes sure that the same invite does not re-appear if it has already been shown.</td>
+        <td>One year</td>
+    </tr>
+    <tr>
+        <td>_hjDonePolls</td>
+        <td>Used if you complete a pop-up survey. It makes sure the same survey doesn’t appear again.</td>
+        <td>One year</td>
+    </tr>
+    <tr>
+        <td>_hjMinimizedPolls</td>
+        <td>Used if you minimise a pop-up survey. It makes sure that the survey stays minimised.</td>
+        <td>One year</td>
+    </tr>
+    <tr>
+        <td>_hjDoneTestersWidgets</td>
+        <td>Used if you complete a pop-up survey asking you to take part in research. It makes sure the same survey doesn’t appear again.</td>
+        <td>One year</td>
+    </tr>
+    <tr>
+        <td>_hjMinimizedTestersWidgets</td>
+        <td>Set if you minimise a pop-up survey asking you to take part in research. It makes sure that the survey stays minimised.</td>
+        <td>One year</td>
+    </tr>
+    <tr>
+        <td>_hjIncludedInSample</td>
+        <td>Used to show if you are included in a sample currently being monitored in HotJar.</td>
+        <td>One year</td>
+    </tr>
+    </tbody>
+</table>
+<div class="text">
     <h3 class="heading-small">Government services</h3>
-    <p>Most services we link to are run by different government departments, eg HM Revenue and Customs (HMRC) or the Home Office.</p>
+    <p>Most services we link to are run by different government departments, for example HM Revenue and Customs (HMRC) or the Home Office.</p>
     <p>These services may set additional cookies and, if so, will have their own cookies policy.</p>
 </div>
