BL-5451 Monthly notification about TQI stats for Aedm and Aed users. BL-5452 Monthly notification about TQI stats for SM  users.

--- a/mot-web-frontend/module/Site/view/site/site/test-quality-information/group.phtml
+++ b/mot-web-frontend/module/Site/view/site/site/test-quality-information/group.phtml
@@ -14,3 +14,10 @@ echo $this->partial('site/site/test-quality-information/group-tester-table', [
     'group' => $group,
     'queryParams' => $queryParams,
 ]);
+
+if ($group->hasTests()) {
+    echo $this->partial('site/site/test-quality-information/group-csv-download', [
+        'group' => $group,
+        'queryParams' => $queryParams,
+    ]);
+}
