tqi notification array index fix

--- a/mot-web-frontend/module/PersonModule/view/qualification-details/add-or-edit.phtml
+++ b/mot-web-frontend/module/PersonModule/view/qualification-details/add-or-edit.phtml
@@ -48,7 +48,7 @@ $form = $this->viewModel->form;
         <ul class="content-navigation__secondary">
             <li>
                 <a href="<?php echo $this->viewModel->backUrl ?>">
-                    Cancel and return to MOT tester training certificates
+                    Cancel and return to initial training qualifications
                 </a>
             </li>
         </ul>
