--- a/mot-web-frontend/module/PersonModule/view/qualification-details/confirmation.phtml
+++ b/mot-web-frontend/module/PersonModule/view/qualification-details/confirmation.phtml
@@ -14,7 +14,7 @@
 <nav class="content-navigation">
     <ul class="content-navigation__secondary">
         <li>
-            <a id="return-to-qualification-details" href="<?php echo $this->url($this->viewModel->startPageRoute) ?>">Return to qualification details</a>
+            <a id="return-to-qualification-details" href="<?php echo $this->url($this->viewModel->startPageRoute) ?>">Return to initial training qualifications</a>
         </li>
     </ul>
 </nav>
