--- a/mot-web-frontend/module/PersonModule/view/qualification-details/review.phtml
+++ b/mot-web-frontend/module/PersonModule/view/qualification-details/review.phtml
@@ -55,37 +55,46 @@ echo $this->partial(
 
 <?php if ($this->viewModel->isViewingHimself): ?>
     <h3 class="heading-medium">
-        By confirming these details you agree to the following:
+        By confirming these details you agree to the following declaration.
     </h3>
     <div class="message--important">
         <h3 class="message__heading">
             Declaration
         </h3>
         <p>
-            I understand that as an authorised MOT tester:
+            I understand that as an authorised MOT tester, I must:
         </p>
         <ul class="list-bullet">
             <li>
-                I will not harass, bully, verbally or physically abuse, or discriminate against any employee of DVSA or person acting on its behalf
+                be a skilled mechanic with at least 4 years’ full-time employment servicing and repairing the types of vehicles I’m going to test
             </li>
             <li>
-                I will be legally responsible for the MOT test certificate and any other official documents I use
+                have a current and full UK driving licence for the vehicle classes I want to test
             </li>
             <li>
-                I will notify the Authorised Examiner at my testing station if my driving licence is suspended or restricted
+                notify the Authorised Examiner at my testing station if my driving licence is suspended or restricted
             </li>
             <li>
-                I will carry out MOT tests to DVSA standards
+                have no unspent criminal convictions related to the motor trade or involving acts of violence or intimidation
             </li>
             <li>
-                I must not have any unspent criminal convictions related to the motor trade or involving acts of violence or intimidation
+                notify DVSA in the future if I gain any criminal convictions of this type
             </li>
             <li>
-                I will notify DVSA of any future criminal convictions relating to the motor trade or acts of violence or intimidation
+                never harass, bully, verbally or physically abuse, or discriminate against any employee of DVSA or person acting on its behalf
+            </li>
+            <li>
+                be ‘of good repute’ - DVSA will decide this to make sure I’m suitable to be an MOT tester
+            </li>
+            <li>
+                make sure that personal details on my MOT testing service user profile, including email address, personal address and phone number, are kept up to date
+            </li>
+            <li>
+                carry out all MOT tests to the requirements of Section 45 of the Road Traffic Act 1988, the Motor Vehicles (Tests) Regulations, the MOT inspection manual, the MOT testing guide, and additional information issued from time to time by DVSA
             </li>
         </ul>
         <p>
-            I am aware that I may be disqualified from testing if the DVSA discovers that I have not met the terms of this declaration.
+            I am aware that I may be disqualified from testing if DVSA discovers I haven’t met these terms.
         </p>
     </div>
     <p>
