BL-5550 Fix comments broken by checkstyle

--- a/mot-web-frontend/module/Core/view/layout/layout.phtml
+++ b/mot-web-frontend/module/Core/view/layout/layout.phtml
@@ -197,6 +197,7 @@ $mastheadPresenter = new MastheadPresenter();
                 <nav class="global-footer_navigation">
                     <ul>
                         <li><a href="/cookies">Cookies</a></li>
+                        <li><a href="/privacy-policy">Privacy policy</a></li>
                         <li>
                             Built by the Driver &amp; Vehicle Standards Agency
                             <?php
