--- a/mot-web-frontend/module/Core/view/partial/fragments/footer-govuk.phtml
+++ b/mot-web-frontend/module/Core/view/partial/fragments/footer-govuk.phtml
@@ -35,6 +35,7 @@
                 <h2 class="visuallyhidden">Support links</h2>
                 <ul>
                     <li><a href="/cookies">Cookies</a></li>
+                    <li><a href="/privacy-policy">Privacy policy</a></li>
                     <li>
                         Built by the <a href="https://www.gov.uk/government/organisations/driver-and-vehicle-standards-agency">Driver &amp; Vehicle Standards Agency</a>
                         <?php if ($this->identity()):
