--- a/mot-web-frontend/module/Application/view/layout/layout_enforcement.phtml
+++ b/mot-web-frontend/module/Application/view/layout/layout_enforcement.phtml
@@ -196,6 +196,7 @@ if ($this->authorisationHelper()->hasRole(\DvsaCommon\Constants\Role::USER)) {
                 <nav class="global-footer_navigation">
                     <ul>
                         <li><a href="/cookies">Cookies</a></li>
+                        <li><a href="/privacy-policy">Privacy policy</a></li>
                         <li>
                             Built by the Driver &amp; Vehicle Standards Agency
                             <?php
