BL-6090 added eu_roadworthiness feature toggle

--- a/mot-web-frontend/module/Application/view/application/index/cookies.phtml
+++ b/mot-web-frontend/module/Application/view/application/index/cookies.phtml
@@ -141,6 +141,26 @@
     </tbody>
 </table>
 <div class="text">
+    <h3 class="heading-small">&nbsp;</h3>
+    <p>An additional cookie is used to indicate the status of the account, and this will only appear when the account is locked for security reasons. It will be removed when the account is unlocked.</p>
+</div>
+<table>
+    <thead>
+    <tr>
+        <th>Name</th>
+        <th>Purpose</th>
+        <th>Expires</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>locked_account</td>
+        <td>This indicates that you are locked out of your account. It tells the application to inform you of this so that you can take action to unlock it.</td>
+        <td>When you unlock  your account</td>
+    </tr>
+    </tbody>
+</table>
+<div class="text">
     <h2 class="heading-medium">Third-party cookies</h2>
     <h3 class="heading-small">Our feedback survey</h3>
     <p>We use <a rel="external" href="http://www.smartsurvey.co.uk/">SmartSurvey</a> to collect feedback comments.
