BL-6083 updated TestItemCategoryRepository.php and RfrRepository.php to take start and end date into account when viewing category tree for user browse journey and category list and then ammending RFR queries to return values depending on their start and end date for new EU categories and RFRs.

--- a/mot-web-frontend/module/MotTestModule/view/defects/add-defect.twig
+++ b/mot-web-frontend/module/MotTestModule/view/defects/add-defect.twig
@@ -55,11 +55,13 @@
         <textarea type="text" name="comment" id="comment" class="form-control"></textarea>
     </div>
 
-    <div class="form-group">
-        <label class="block-label" for="failureDangerous">
-            <input type="checkbox" value="1" name="failureDangerous" id="failureDangerous">This defect is dangerous
-        </label>
-    </div>
+    {% if isPreEuDirective == true %}
+        <div class="form-group">
+            <label class="block-label" for="failureDangerous">
+                <input type="checkbox" value="1" name="failureDangerous" id="failureDangerous">This defect is dangerous
+            </label>
+        </div>
+    {% endif %}
 
     <nav class="content-navigation">
         <input type="hidden" name="confirmDetailPage" value="">
