--- a/mot-web-frontend/module/MotTestModule/view/defects/edit-defect.twig
+++ b/mot-web-frontend/module/MotTestModule/view/defects/edit-defect.twig
@@ -55,12 +55,14 @@
         <textarea type="text" name="comment" id="comment" class="form-control">{{ identifiedDefect.userComment }}</textarea>
     </div>
 
-    <div class="form-group">
-        <label class="block-label" for="failureDangerous">
-            <input type="checkbox" name="failureDangerous" id="failureDangerous"
-                    {% if identifiedDefect.dangerous %} checked {% endif %}>This defect is dangerous
-        </label>
-    </div>
+    {% if isPreEuDirective == true %}
+        <div class="form-group">
+            <label class="block-label" for="failureDangerous">
+                <input type="checkbox" name="failureDangerous" id="failureDangerous"
+                        {% if identifiedDefect.dangerous %} checked {% endif %}>This defect is dangerous
+            </label>
+        </div>
+    {% endif %}
 
     <nav class="content-navigation">
         <input type="hidden" name="confirmDetailPage" value="">
