--- a/mot-web-frontend/module/MotTestModule/view/mot-test/index.twig
+++ b/mot-web-frontend/module/MotTestModule/view/mot-test/index.twig
@@ -19,43 +19,45 @@
         <form id="odometerResults" class="form-inline" action="{{ url('odometer', {'tID' : motTest.motTestNumber}) }}"
               method="POST">
             {{ csrfToken('odometerResults') }}
-            <fieldset>
-                <div class="form-group">
-                    <fieldset class="">
-                        <label class="form-label">Odometer reading</label>
-                        <label class="block-label js-hidden" for="odoInputRadio" data-target="__odoValue">
-                            <input type="radio" name="resultType" id="odoInputRadio" value="OK" checked="" aria-controls="__odoValue" aria-expanded="false">Odometer is visible and functional
-                        </label>
 
-                        <input type="text" name="odometer" id="odometer" class="form-control">
+            <div class="form-group">
 
-                        <br><br>
+                <fieldset class="u-space-b15">
+                    <label class="form-label">Odometer reading</label>
+                    <label class="block-label js-hidden" for="odoInputRadio" data-target="__odoValue">
+                        <input type="radio" name="resultType" id="odoInputRadio" value="OK" checked="" aria-controls="__odoValue" aria-expanded="false">Odometer is visible and functional
+                    </label>
+                    <input type="text" name="odometer" id="odometer" class="form-control">
+                </fieldset>
 
-                        <label for="unit" class="form-label">Measurement units</label>
-                        <select id="unit" name="unit" class="form-control-select">
-                            <option value="mi">Miles</option>
-                            <option value="km">Kilometres</option>
-                        </select>
+                 <fieldset class="u-space-b30">
+                    <label for="unit" class="form-label">Measurement units</label>
+                    <select id="unit" name="unit" class="form-control-select">
+                        <option value="mi">Miles</option>
+                        <option value="km">Kilometres</option>
+                    </select>
+                 </fieldset>
 
-                        <br><br>
+                  <fieldset>
+                     <div class="form-group">
+                         <div class="multiple-choice">
+                             <input type="radio" value="NOT_READ" name="resultType" id="notReadable" aria-expanded="false">
+                             <label for="notReadable">Odometer is unreadable</label>
+                         </div>
+                         <div class="multiple-choice">
+                             <input type="radio" value="NO_METER" name="resultType" id="noOdometer" aria-expanded="false">
+                             <label for="noOdometer">Odometer is not present</label>
+                         </div>
+                     </div>
+                 </fieldset>
 
-                        <label class="block-label" for="notReadable">
-                            <input type="radio" value="NOT_READ" name="resultType" id="notReadable" aria-expanded="false">Odometer is unreadable
-                        </label>
-
-                        <label class="block-label" for="noOdometer">
-                            <input type="radio" value="NO_METER" name="resultType" id="noOdometer" aria-expanded="false">Odometer is not present
-                        </label>
-                    </fieldset>
-                </div>
-            </fieldset>
+            </div>
 
             <nav class="content-navigation">
                 <input type="submit" id="odometer_submit" name="submit" value="Update reading" class="button">
                 <ul class="content-navigation__secondary">
                     <li>
-                        <a href="{{ url('mot-test', {'motTestNumber' : motTest.motTestNumber}) }}">
-                            Cancel and return to MOT test results</a>
+                        <a href="{{ url('mot-test', {'motTestNumber' : motTest.motTestNumber}) }}">Cancel and return to MOT test results</a>
                     </li>
                 </ul>
             </nav>
